--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "joel suarez <joelsuarez.1101@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "page": "^1.7.1",
     "pug": "^2.0.0-rc.3"
   }
 }
