automatizando tareas con watchify y colocando el script en package.json

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   , "main": "index.js"
   , "scripts": { 
     "build": "gulp"
+    ,"start": "gulp watch & node server.js"
 
   }
   , "author": "joel suarez <joelsuarez.1101@gmail.com>"
