--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "javascript-pro"
-  , "version": "1.0.0"
-  , "description": ""
-  , "main": "index.js"
-  , "scripts": { 
-    "build": "gulp"
-    ,"start": "gulp watch & node server.js"
-
+  "name": "javascript-pro",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "build": "gulp",
+    "start": "gulp watch & node server.js"
+  },
+  "author": "joel suarez <joelsuarez.1101@gmail.com>",
+  "license": "ISC",
+  "dependencies": {
+    "empty-element": "^1.0.0",
+    "page": "^1.7.1",
+    "pug": "^2.0.0-rc.3"
   }
-  , "author": "joel suarez <joelsuarez.1101@gmail.com>"
-  , "license": "ISC"
-  , "dependencies": {
-    "page": "^1.7.1"
-    ,"pug": "^2.0.0-rc.3"
-  }
-
 }
